# 3dldf

./: .gitignore  00INFO  00TODO  AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  announcement  announcement_2.0.1.txt  announcement_2.0.2.txt  config.h.in  configure  configure.ac  rebuild.sh  reconfig.sh  reconfig_ldf.sh  ttemp.el
CWEB/: .gitignore  3DLDFcpl.web  3DLDFp02.web  3DLDFp03.web  3DLDFprc.web  3DLDFprg.web  3DLDFtex.bas  Makefile.am  arc.web  arcexpr.w  arcvexpr.w  bckmttr.web  biblio.web  circles.web  cmpxassn.w  cmpxexpr.w  cmpxvxpr.w  cncsctlt.web  cnepspng.web  colall.web  colors.web  complex.web  cones.web  conicsct.web  conveps.web  cpyrtasc.txt  cpyrtc.txt  cpyrtcpp.txt  cpyrtel.txt  cpyrtss.txt  cpyrtweb.txt  crclslc.web  creatnew.web  cslcmnd.w  cslexpr.w  cslvexpr.w  ctang3DL  cuboid.web  curves.web  cylinder.web  (+174 more)
accsdtbs/: .gitignore  00README  Makefile.am  Makefile.in  accsdtbs.web  accsgtpt.web  classes.web  input.txt  parser.output  parser.web  prbsnflx  scanner.web  stars.web
astronmy/: .gitignore  astronmy.lmc  astronmy.sql  brightstar_2018.sql  brightstar_2018.txt  brightstar_2018_backup.txt  clstsph1.aux  clstsph2.ldf  constellations.txt  constellations_alphabetical.txt  constellations_alphabetical_backup.txt  constellations_by_area.txt  iau_constellations_list.sql  iau_constellations_list.txt  iau_constellations_list_backup.txt  links.txt  starlist.txt  stars_by_constellation_200.tex  stars_output.sql  stars_with_celestial_coordinates.sh  stars_with_celestial_coordinates.sql  stars_with_celestial_coordinates.txt  ttemp.cxx  (+2 more)
doc/: .gitignore  3DLDF.texi  3dldf.html  3dldf.info  3dldf.ps  3dldf.texi  Makefile.am  Makefile.in  addfile.texi  biblio.texi  changes.texi  circle.texi  cmndidx.texi  color.texi  complex.texi  concidx.texi  contrib.texi  creatnew.texi  cuboid.texi  dashptrn.texi  dttypes.texi  dttypidx.texi  ellipse.texi  example.ldf  examples.ldf  examples.tex  examples.texi  figure.texi  focus.texi  funcidx.texi  future.texi  getstart.texi  glbcnvar.texi  gsdlpt.texi  gspaths.texi  gspict.texi  gsplane.texi  gspoint.texi  gssolfig.texi  gstranpt.texi  (+39 more)
doc/old_doc/: .gitignore  3DLDF.dvi  3DLDF.html  3DLDF.info  3DLDF.ps  3DLDF.texi  ChangeLog  ChangeLog.dev  Makefile.am  Makefile.in  addfile.texi  biblio.texi  changes.texi  circle.texi  color.texi  concidx.texi  contrib.texi  creatnew.texi  cuboid.texi  ellipse.texi  fdl.texi  focus.texi  funcidx.texi  future.texi  glbcnvar.texi  gsdlpt.texi  gspaths.texi  gspict.texi  gsplane.texi  gspoint.texi  gssolfig.texi  gstranpt.texi  gstransf.texi  instlrun.texi  intersct.texi  intro.texi  io.texi  label.texi  line.texi  path.texi  (+18 more)
doc/old_doc/graphics/eps/: 3DLDFmp.1  3DLDFmp.10  3DLDFmp.100  3DLDFmp.101  3DLDFmp.102  3DLDFmp.103  3DLDFmp.104  3DLDFmp.105  3DLDFmp.106  3DLDFmp.107  3DLDFmp.108  3DLDFmp.109  3DLDFmp.11  3DLDFmp.110  3DLDFmp.111  3DLDFmp.112  3DLDFmp.113  3DLDFmp.114  3DLDFmp.115  3DLDFmp.116  3DLDFmp.117  3DLDFmp.118  3DLDFmp.119  3DLDFmp.12  3DLDFmp.120  3DLDFmp.121  3DLDFmp.122  3DLDFmp.123  3DLDFmp.125  3DLDFmp.126  3DLDFmp.127  3DLDFmp.128  3DLDFmp.129  3DLDFmp.13  3DLDFmp.130  3DLDFmp.131  3DLDFmp.132  3DLDFmp.133  3DLDFmp.134  3DLDFmp.135  (+157 more)
examples/: 00INFO  00README  Makefile  Makefile.am  Makefile.in  Makefile_sub  README  allplans.txt  arc_1.ldf  arc_1.txt  bldelem0.lmc  bldelem1.ldf  bldelem1.lmc  bldelem1.txt  bldelem2.ldf  bldelem2.lmc  bldelem2.txt  bldelem3.ldf  bldelem3.lmc  bldelem3.txt  bldelem4.ldf  bldelem4.lmc  bldelem4.txt  bldelem5.ldf  bldelem5.lmc  bldelem5.txt  braik_01.ldf  braik_01.txt  braik_02.ldf  braik_02.txt  braik_03.ldf  braik_03.txt  chssbrds.ldf  chssbrds.txt  clktwr_01.ldf  clktwr_01.txt  cones01.ldf  cubd_01.ldf  cubd_02.ldf  cubd_06.ldf  (+121 more)
src/: .gitignore  00INFO  00NOTES  00TODO  3DLDF_resolve_bottom.mp  3DLDF_resolve_top.mp  3DLDFcpl.web  3DLDFmp.mp  3DLDFp02.web  3DLDFp03.web  3DLDFprc.web  3DLDFprg.mac  3DLDFprg.web  3DLDFtex.bas  3DLDFtex.tex  3dldf_dump.sql  Astronomy_dump.sql  Makefile.am  Makefile.in  Makefile_1  Plans2_207.xcf  accsdtbs.cxx  accsdtbs.web  accsgtpt.web  alhambra_195.mp  alhambra_195.txt  alhambra_207.ldf  alhambra_207.mp  alhambra_207.txt  alhambra_207_a3_l.txt  alhambra_207_original.tex  arc.web  arcexpr.w  arcvexpr.w  astronmy.lmc  astronmy.web  astronmy3.lmc  astronmy4.lmc  astronmy5.lmc  atemp.ldf  (+364 more)
src/CWEBPTCH/: ChangeLog  ccomm-3D.ch  common.c  ctang-3D.ch  ctangle.c  cweave.c
src/Outline_Fonts/: .gitignore  Makefile.am  Makefile.in  atemp.mp  cmrm_test.mp  euler_fraktur.mp  euler_fraktur.txt  eurm_char_dimens.txt  eurm_test.mp  eurm_test.txt  hollow_ssb.mp  hollow_ssb.txt  outline_cmrm_test.mac  outline_euler_fraktur.mac  outline_eurm_test.mac  outline_hollow_ssb.mac  outline_tex_logo.mac  outline_ttemp.mac  tex_logo.mp  tex_logo.txt  ttemp.mp  ttemp.txt
src/Outline_Fonts/Cmssbxldf_3D/: .gitignore  A_3D.ldf  Makefile.am  Makefile.in  writemcs.mp
src/Outline_Fonts/Hollow/: .gitignore  3DLDF_resolve_bottom.mp  3DLDF_resolve_top.mp  Makefile.am  Makefile.in  hollow.ldf  hollow.mf  hollow.mp  hollow.tex  hollow1037.mf  hollow1200.mf  hollow1244.mf  hollow1315.mf  hollow1440.mf  hollow1493.mf  hollow1728.mf  hollow1792.mf  hollow2074.mf  hollow2488.mf  hollow2986.mf  hollow3583.mf  hollow600.mf  hollow657.mf  hollow720.mf  hollow864.mf  hollowA.ldf  hollow_mf_test.tex  hollow_test.tex  hollow_test_ps.ldf  hollow_test_ps.tex  hollowg.ldf  hollowmftest.mf  hollowps.mf  plain.lmc  writemcs.mp
src/Superellipse/: ldf_superellipse.ldf  superellipse.mp  superellipse_examples.ldf
src/listing/: .gitignore  00NOTES  3DLDF_listing.tex  Makefile  arc.web  arcexpr.w  arcvexpr.w  circles.web  cmpxassn.w  cmpxexpr.w  cmpxvxpr.w  cncsctlt.web  colall.web  colors.web  complex.web  cones.web  conicsct.web  crclslc.web  creatnew.web  cslcmnd.w  cslexpr.w  cslvexpr.w  cuboid.web  curves.web  cylinder.web  dashptrn.web  ddchdrn.web  deftfncs.web  ellipses.web  ellpsoid.web  ellpsslc.web  fcscmnd.w  figures.web  glyphs.web  gsltmplt.web  helices.web  hyprbola.web  imetfncs.web  io.web  layers.web  (+144 more)
(+78 files in other folders)
