#### 3DLDF-2.0/examples/Makefile.am
#### Created by Laurence D. Finston (LDF) Mon Nov  4 18:55:22 CET 2013

#### * Copyright and License.

#### This file is part of GNU 3DLDF, a package for three-dimensional drawing. 
#### Copyright (C) 2013 The Free Software Foundation

#### GNU 3DLDF is free software; you can redistribute it and/or modify 
#### it under the terms of the GNU General Public License as published by 
#### the Free Software Foundation; either version 3 of the License, or 
#### (at your option) any later version. 

#### GNU 3DLDF is distributed in the hope that it will be useful, 
#### but WITHOUT ANY WARRANTY; without even the implied warranty of 
#### MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the 
#### GNU General Public License for more details. 

#### You should have received a copy of the GNU General Public License 
#### along with GNU 3DLDF; if not, write to the Free Software 
#### Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA 

#### GNU 3DLDF is a GNU package.  
#### It is part of the GNU Project of the  
#### Free Software Foundation 
#### and is published under the GNU General Public License. 
#### See the website http://www.gnu.org 
#### for more information.   
#### GNU 3DLDF is available for downloading from 
#### http://www.gnu.org/software/3dldf/LDF.html. 

#### Please send bug reports to Laurence.Finston@@gmx.de
#### The mailing list help-3dldf@gnu.org is available for people to 
#### ask other users for help.  
#### The mailing list info-3dldf@gnu.org is for sending 
#### announcements to users. To subscribe to these mailing lists, send an 
#### email with "subscribe <email-address>" as the subject.  

#### The author can be contacted at: 

#### Laurence D. Finston 
#### c/o Free Software Foundation, Inc. 
#### 51 Franklin St, Fifth Floor 
#### Boston, MA  02110-1301  
#### USA

#### Laurence.Finston@gmx.de 




## * Top.

# ** Variables.

#### Automatic Variables.  For more, see Section 10.5.3, "Automatic Variables"
#### of the Make info manual.
#### LDF 2009.12.29.

#### $@:  Target
#### $<:  First prerequisite
#### $^:  The names of all the prerequisites, with spaces between them.
#### $*:  The stem with which an implicit rule matches

## * (1) Top.

# ** (2) Variables.

EXTRA_DIST = Makefile.am Makefile.in 00INFO braik_03.ldf ellpln01.ldf \
	     hyprb_02.txt polyrhyt.txt ripple_2.ldf strspr01.txt arc_1.ldf \
	     braik_03.txt ellpln01.txt hyprb_03.ldf pprcut01.ldf ripple_2.txt \
	     sundl_01.ldf arc_1.txt chssbrds.ldf elpdmd01.ldf hyprb_04.ldf \
	     pprcuts.txt sphrmd00.lmc sundl_01.txt bldelem0.lmc chssbrds.txt \
	     elpdmd01.lmc hyprb_05.ldf prbla_00.ldf sphrmd01.ldf sundl_02.ldf \
	     bldelem1.ldf clktwr_01.ldf elpdmd01.txt intrfr_2.ldf prbla_00.txt \
	     sphrmd01.txt sundl_02.txt bldelem1.lmc clktwr_01.txt elpsd_02.ldf \
	     intrfr_2.txt prbla_01.ldf sphrmd02.ldf sundl_03.ldf bldelem1.txt \
	     cones01.ldf elpsd_06.ldf intrfr_3.ldf prbla_01.txt sphrmd02.txt \
	     sundl_03.lmc bldelem2.ldf conveps elpsd_13.ldf intrfr_3.txt \
	     prbla_05.ldf sphrmd03.ldf sundl_03.txt bldelem2.lmc cubd_01.ldf \
	     elpsd_17.ldf intrfr_5.ldf prbla_05.txt sphrmd03.txt tngnts_1.ldf \
	     bldelem2.txt cubd_02.ldf fctcn01.ldf intrfr_5.txt prbla_06.ldf \
	     stgrddc1.ldf tngnts_1.txt bldelem3.ldf cubd_06.ldf fctcn01.txt \
	     intrfr_6.ldf prbla_06.txt stgrddc1.txt trchd_1.ldf bldelem3.lmc \
	     cycld_1.ldf fmt8511.txt intrfr_6.txt prbla_10.ldf stlltn01.ldf \
	     trchd_1.txt bldelem3.txt cycld_1.txt fmtdina4.txt intrfr_7.ldf \
	     prbla_10.txt stlltn01.txt ttemp.el bldelem4.ldf cycld_2.ldf \
	     goboards.ldf intrfr_7.txt prbla_11.ldf stlltn02.mp wave_1.ldf \
	     bldelem4.lmc cycld_2.txt goboards.txt kntpoly1.ldf prbla_11.txt \
	     stlltn02.txt wave_1.mp bldelem4.txt dodec_01.ldf grrhm_02.ldf \
	     kntpoly1.txt prbla_12.ldf stlltn03.ldf wave_1.txt bldelem5.ldf \
	     dodec_01.txt grrhm_06.ldf Makefile prbla_12.txt stlltn04.mp \
	     wave_2.ldf bldelem5.lmc dodec_02.ldf grrhm_06.txt Makefile.am \
	     raster_0.mp stlltn04.txt wave_2.mp bldelem5.txt dodec_02.lmc \
	     hyprb_00.ldf Makefile.in rhmtrc_01.ldf stlltn05.mp wave_2.txt \
	     braik_01.ldf dodec_02.txt hyprb_00.txt plyhd_01.ldf rhmtrc_01.lmc \
	     stlltn05.txt braik_01.txt dodec_03.ldf hyprb_01.ldf plyhd_05.ldf \
	     rhmtrc_01.txt stlltns.lmc braik_02.ldf dodec_03.lmc hyprb_01.txt \
	     polyrhyt.ldf ripple_1.ldf stlltns.txt braik_02.txt dodec_03.txt \
	     hyprb_02.ldf polyrhyt.lmc ripple_1.txt strspr01.ldf \
             pprcuts.ps pprcuts.pdf



CLEANFILES := 



#### ** (2) Rules

#### !! START HERE:  LDF 2013.11.04.  Working on examples.

# .PHONY: all

# all: $(PS_FILES) $(PDF_FILES) $(PS_ZIP_FILES) $(PDF_ZIP_FILES) \
#                  pprcuts.ps.gz pprcuts.ps.gz pprcuts.pdf.gz pprcuts.pdf.gz \
#                  stlltns.ps.gz stlltns.ps.gz stlltns.pdf.gz stlltns.pdf.gz


# #### Papercuts --- pprcuts

.PHONY: pprcuts

pprcut01.1 pprcut01.2 pprcut01.3 pprcut01.4: pprcut01.mp
	mpost pprcut01.mp

pprcut01.mp: pprcut01.ldf
	$(top_builddir)/src/3dldf pprcut01.ldf

pprcuts.dvi: pprcut01.1 pprcut01.2 pprcut01.3 pprcut01.4 pprcuts.txt
	tex pprcuts.txt

pprcuts.ps: pprcuts.dvi
	dvips -o pprcuts.ps pprcuts.dvi

pprcuts.pdf: pprcuts.ps
	ps2pdf pprcuts.ps

# #### Stellation Patterns --- stllns

# .PHONY: stlltns

# stlltns: stlltns.ps stlltns.ps.gz stlltns.pdf stlltns.pdf.gz 
# 	mv stlltns.ps stlltns.ps.gz stlltns.pdf stlltns.pdf.gz ../graphics
# #	cd ../graphics && cvs commit -m "Edited." stlltns.ps stlltns.ps.gz stlltns.pdf stlltns.pdf.gz 

# #### 'stlltn02.mp' and 'stlltn04.mp' are special:  they were written by hand, i.e., 
# #### there are no `.ldf' files.  
# #### LDF 2010.09.10.
# #### LDF 2011.01.05.

# stlltn01.1: stlltn01.mp
# 	mpost stlltn01.mp

# stlltn02.1: stlltn02.mp
# 	mpost stlltn02.mp

# stlltn03.1: stlltn03.mp
# 	mpost stlltn03.mp

# stlltn04.1: stlltn04.mp
# 	mpost stlltn04.mp

# stlltn01.mp: stlltn01.ldf
# 	./3dldf stlltn01.ldf

# stlltn03.mp: stlltn03.ldf
# 	./3dldf stlltn03.ldf

# stlltns.dvi: stlltn01.1 stlltn02.1 stlltn03.1 stlltn04.1 stlltns.txt
# 	tex stlltns.txt

# stlltns.ps: stlltns.dvi
# 	dvips -o stlltns.ps stlltns.dvi

# stlltns.pdf: stlltns.ps
# 	ps2pdf stlltns.ps

# stlltns.ps.gz: stlltns.ps
# 	cp $< stlltns.ps.TEMP
# 	gzip $< 
# 	mv stlltns.ps.TEMP $<
# 	touch $@ 

# stlltns.pdf.gz: stlltns.pdf
# 	cp $< stlltns.pdf.TEMP
# 	gzip $< 
# 	mv stlltns.pdf.TEMP $<
# 	touch $@ 


# bldelem1.mp: bldelem1.ldf bldelem1.lmc
# 	./3dldf bldelem1.ldf

# bldelem1.0: bldelem1.mp
# 	mpost bldelem1.mp

# bldelem1.dvi: bldelem1.0 bldelem1.txt fmt8511.txt fmtdina4.txt
# 	tex '\def\FMT{DINAFOURPORTRAIT}' '\input bldelem1.txt' && tex '\def\FMT{DINAFOURPORTRAIT}' \
#              '\input bldelem1.txt' 



# bldelem2.mp: bldelem2.ldf bldelem2.lmc
# 	./3dldf bldelem2.ldf

# bldelem2.0: bldelem2.mp
# 	mpost bldelem2.mp

# bldelem2.dvi: bldelem2.0 bldelem2.txt fmt8511.txt fmtdina4.txt
# 	tex '\def\FMT{DINAFOURPORTRAIT}' '\input bldelem2.txt' && tex '\def\FMT{DINAFOURPORTRAIT}' \
#              '\input bldelem2.txt' 


# bldelem3.mp: bldelem3.ldf bldelem3.lmc
# 	./3dldf bldelem3.ldf

# bldelem3.0: bldelem3.mp
# 	mpost bldelem3.mp

# bldelem3.dvi: bldelem3.0 bldelem3.txt fmt8511.txt fmtdina4.txt
# 	tex '\def\FMT{DINAFOURPORTRAIT}' '\input bldelem3.txt' && tex '\def\FMT{DINAFOURPORTRAIT}' \
#              '\input bldelem3.txt' 

# bldelem4.mp: bldelem4.ldf bldelem4.lmc
# 	./3dldf bldelem4.ldf

# bldelem4.0: bldelem4.mp
# 	mpost bldelem4.mp

# bldelem4.dvi: bldelem4.0 bldelem4.txt fmt8511.txt fmtdina4.txt
# 	tex '\def\FMT{DINAFOURPORTRAIT}' '\input bldelem4.txt' && tex '\def\FMT{DINAFOURPORTRAIT}' \
#              '\input bldelem4.txt' 

# bldelem5.mp: bldelem5.ldf bldelem5.lmc
# 	./3dldf bldelem5.ldf

# bldelem5.0: bldelem5.mp
# 	mpost bldelem5.mp

# bldelem5.dvi: bldelem5.0 bldelem5.txt fmt8511.txt fmtdina4.txt
# 	tex '\def\FMT{DINAFOURPORTRAIT}' '\input bldelem5.txt' && tex '\def\FMT{DINAFOURPORTRAIT}' \
#              '\input bldelem5.txt' 




# .PHONY : bldelem1

# bldelem1: bldelem1.ps bldelem1.ps.gz bldelem1.pdf bldelem1.pdf.gz
# 	mv $^ ../graphics; cd ../graphics/; cvs commit -m "Edited." $^

# .PHONY : bldelem2

# bldelem2: bldelem2.ps bldelem2.ps.gz bldelem2.pdf bldelem2.pdf.gz
# 	mv $^ ../graphics; cd ../graphics/; cvs commit -m "Edited." $^

# .PHONY : bldelem3

# bldelem3: bldelem3.ps bldelem3.ps.gz bldelem3.pdf bldelem3.pdf.gz
# 	mv $^ ../graphics; cd ../graphics/; cvs commit -m "Edited." $^

# .PHONY : bldelem4

# bldelem4: bldelem4.ps bldelem4.ps.gz bldelem4.pdf bldelem4.pdf.gz
# 	mv $^ ../graphics; cd ../graphics/; cvs commit -m "Edited." $^

# .PHONY : bldelem5

# bldelem5: bldelem5.ps bldelem5.ps.gz bldelem5.pdf bldelem5.pdf.gz
# 	mv $^ ../graphics; cd ../graphics/; cvs commit -m "Edited." $^






.PHONY: query

query:
	@echo "CXXCOMPILE == $(CXXCOMPILE)"
	@echo "SOURCEDIR == $(SOURCEDIR)"
	@echo "top_builddir == $(top_builddir)"

# @echo "3dldflb_c_files == $(3dldflb_c_files)"
# @echo "3dldflb_cpp_files == $(3dldflb_cpp_files)"
# @echo "CLEANFILES == $(CLEANFILES)"

# 
# @echo "CXX == $(CXX)"
# @echo "CXXLINK == $(CXXLINK)"
# @echo "CXXFLAGS == $(CXXFLAGS)"

## Local Variables:
## mode:Makefile
## outline-minor-mode:t
## outline-regexp:"## *\\*+"
## abbrev-mode:t
## End:
